test/it/code-samples/negative/pages-unknown-module/pageElements.d.ts
type PageElementsMap = {
    "#page1": $w.Page;
    "#text1": $w.Text;
    "#button1": $w.Button;
    "#input1": $w.TextInput;
    "#button2": $w.Button;
    "#googleMaps1": $w.GoogleMap;
    "#text2": $w.Text;
    "#header1": $w.Header;
    "#footer1": $w.Footer;
    "#wixChat1": $w.IFrame;
  }